--- a/magick-core/pom.xml
+++ b/magick-core/pom.xml
@@ -2,34 +2,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.gemserk.libgdxtest</groupId>
-		<artifactId>libgdxtest</artifactId>
+		<groupId>com.gemserk.games.magick</groupId>
+		<artifactId>magick</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.gemserk.libgdxtest</groupId>
-	<artifactId>libgdx-test-desktop</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>magick-core</artifactId>
 	<packaging>jar</packaging>
-	<name>Test Desktop</name>
-	<description>Test Desktop</description>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>com.googlecode.mavennatives</groupId>
-				<artifactId>maven-nativedependencies-plugin</artifactId>
-				<version>0.0.5</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+	<name>Magick Core</name>
+	<description>Magick Core</description>
 
 	<dependencies>
 		<dependency>
@@ -53,14 +33,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>libgdx-test-core</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-
-		<dependency>
 			<groupId>com.badlogic.gdx</groupId>
-			<artifactId>gdx-backend-lwjgl</artifactId>
+			<artifactId>gdx</artifactId>
 			<version>${libgdxversion}</version>
 		</dependency>
 	</dependencies>
