--- a/magick-desktop/pom.xml
+++ b/magick-desktop/pom.xml
@@ -2,16 +2,32 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.gemserk.libgdxtest</groupId>
-		<artifactId>libgdxtest</artifactId>
+		<groupId>com.gemserk.games.magick</groupId>
+		<artifactId>magick-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.gemserk.libgdxtest</groupId>
-	<artifactId>libgdx-test-core</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>magick-desktop</artifactId>
 	<packaging>jar</packaging>
-	<name>Test Core</name>
-	<description>Test Core</description>
+	<name>Test Desktop</name>
+	<description>Test Desktop</description>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.googlecode.mavennatives</groupId>
+				<artifactId>maven-nativedependencies-plugin</artifactId>
+				<version>0.0.5</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
 		<dependency>
@@ -35,8 +51,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>libgdx-test-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.badlogic.gdx</groupId>
-			<artifactId>gdx</artifactId>
+			<artifactId>gdx-backend-lwjgl</artifactId>
 			<version>${libgdxversion}</version>
 		</dependency>
 	</dependencies>
