--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
-target
-.classpath
-.project
-.settings
-libgdx-test-android/libs/
-libgdx-test-android/.externalToolBuilders/
-libgdx-test-android/gen/
+/target
+/.classpath
+/.project
+/.settings
+magick-desktop/target
+magick-desktop/.classpath
+magick-desktop/.project
+magick-desktop/.settings
+magick-core/target
+magick-core//.classpath
+magick-core//.project
+magick-core//.settings
+magick-android/target
+magick-android/.classpath
+magick-android/.project
+magick-android/.settings
+magick-android/libs/
+magick-android/.externalToolBuilders/
+magick-android/gen/
