--- a/magick-android/AndroidManifest.xml
+++ b/magick-android/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.gemserk.libgdx.test"
       android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName="1.0" package="com.gemserk.games.magick">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name=".HelloWorldAndroid"
+        <activity android:name="HelloWorldAndroid"
                   android:label="@string/app_name"
                   android:configChanges="keyboard|keyboardHidden|orientation">
             <intent-filter>
