--- a/magick-android/pom.xml
+++ b/magick-android/pom.xml
@@ -80,7 +80,7 @@
 
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>libgdx-test-core</artifactId>
+			<artifactId>magick-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
