--- a/magick-android/pom.xml
+++ b/magick-android/pom.xml
@@ -25,7 +25,7 @@
 				</configuration>
 				<executions>
 					<execution>
-						<phase>package</phase>
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>copy</goal>
 						</goals>
