--- a/magick-desktop/pom.xml
+++ b/magick-desktop/pom.xml
@@ -19,7 +19,7 @@
 				<version>0.0.5</version>
 				<executions>
 					<execution>
-						<phase>package</phase>
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>copy</goal>
 						</goals>
