--- a/magick-desktop/pom.xml
+++ b/magick-desktop/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>magick-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>magick-assets</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.badlogic.gdx</groupId>
