--- a/magick-desktop/pom.xml
+++ b/magick-desktop/pom.xml
@@ -11,6 +11,32 @@
 	<name>Test Desktop</name>
 	<description>Test Desktop</description>
 
+	<properties>
+
+		<webstartName>${project.name}</webstartName>
+		<webstartCodebase>http://www.gemserk.com/prototipos/magick-webstart-latest/</webstartCodebase>
+
+		<!-- finalName>${project.artifactId}-${project.version}</finalName -->
+
+		<webstartMain>com.gemserk.games.magick.HelloWorldDesktop</webstartMain>
+		<finalName>${project.artifactId}-${project.version}</finalName>
+		<appletGameParameter>com.gemserk.games.magick.HelloWorldDesktop</appletGameParameter>
+		<mainClass>${appletGameParameter}</mainClass>
+		<jnlp.applet.mainClass>com.gemserk.componentsengine.slick.applet.OpenALBugFixAppletGameContainer</jnlp.applet.mainClass>
+
+		<natives>${basedir}/target/natives/</natives>
+
+		<!-- Properties for keystore generation -->
+		<gemserk.keystore>/tmp/keystore-gemserk</gemserk.keystore>
+		<gemserk.keypass>m2m2m2</gemserk.keypass>
+		<gemserk.storepass>m2m2m2</gemserk.storepass>
+
+		<gemserk.alias>gemserk.com</gemserk.alias>
+
+		<gemserk.keystore.delete>true</gemserk.keystore.delete>
+		<gemserk.keystore.gen>true</gemserk.keystore.gen>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -28,6 +54,74 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>webstart</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo.webstart</groupId>
+						<artifactId>webstart-maven-plugin</artifactId>
+						<version>1.0-alpha-2-gemserk-2</version>
+
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>jnlp-inline</goal>
+								</goals>
+							</execution>
+						</executions>
+
+						<configuration>
+							<artifactWithMainClass>${finalName}</artifactWithMainClass>
+
+							<pack200>true</pack200>
+							<gzip>true</gzip>
+
+							<jnlp>
+								<j2seVersion>${compiler.version}+</j2seVersion>
+								<inputTemplateResourcePath>${project.basedir}/src/main/jnlp</inputTemplateResourcePath>
+								<inputTemplate>jnlptemplate.vm</inputTemplate>
+								<outputFile>launch.jnlp</outputFile>
+								<mainClass>${jnlp.applet.mainClass}</mainClass>
+							</jnlp>
+
+							<!-- SIGNING -->
+							<!-- defining this will automatically sign the jar and its dependencies -->
+							<sign>
+
+								<keystore>${gemserk.keystore}</keystore>
+								<keypass>${gemserk.keypass}</keypass>
+								<storepass>${gemserk.storepass}</storepass>
+								<alias>${gemserk.alias}</alias>
+
+								<validity>3560</validity>
+								<dnameCn>Gemserk</dnameCn>
+								<dnameOu>Gemserk</dnameOu>
+								<dnameO>Gemserk</dnameO>
+								<dnameL>Montevideo</dnameL>
+								<dnameSt>Montevideo</dnameSt>
+								<dnameC>UY</dnameC>
+
+								<verify>true</verify>
+
+								<keystoreConfig>
+									<delete>${gemserk.keystore.delete}</delete>
+									<gen>${gemserk.keystore.gen}</gen>
+								</keystoreConfig>
+							</sign>
+
+							<verbose>false</verbose>
+
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 
 	<dependencies>
 		<dependency>
