--- a/magick-android/pom.xml
+++ b/magick-android/pom.xml
@@ -13,7 +13,7 @@
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
-
+		<finalName>magick-android</finalName>
 		<plugins>
 			<plugin>
 				<groupId>com.googlecode.mavennatives</groupId>
