added zipalign for android apk

--- a/magick-android/pom.xml
+++ b/magick-android/pom.xml
@@ -41,10 +41,22 @@
 						<path>${env.ANDROID_HOME}</path>
 						<platform>8</platform>
 					</sdk>
+					<zipalign>
+						<verbose>true</verbose>
+					</zipalign>
 					<deleteConflictingFiles>true</deleteConflictingFiles>
 					<extractDuplicates>true</extractDuplicates>
 					<assetsDirectory>../magick-assets/src/main/resources</assetsDirectory>
 				</configuration>
+				<executions>
+					<execution>
+						<id>alignApk</id>
+						<phase>package</phase>
+						<goals>
+							<goal>zipalign</goal>
+						</goals>
+					</execution>
+				</executions>
 				<extensions>true</extensions>
 			</plugin>
 		</plugins>
