added minsdk and target sdk, added landscape mode to screen

--- a/magick-android/pom.xml
+++ b/magick-android/pom.xml
@@ -44,6 +44,7 @@
 					<zipalign>
 						<verbose>true</verbose>
 					</zipalign>
+					<undeployBeforeDeploy>true</undeployBeforeDeploy>
 					<deleteConflictingFiles>true</deleteConflictingFiles>
 					<extractDuplicates>true</extractDuplicates>
 					<assetsDirectory>../magick-assets/src/main/resources</assetsDirectory>
