--- a/magick-android/AndroidManifest.xml
+++ b/magick-android/AndroidManifest.xml
@@ -2,16 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
       android:versionName="1.0" package="com.gemserk.games.magick"
-      android:installLocation="auto"
+      android:installLocation="preferExternal"
       >
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true" >
         <activity android:name="HelloWorldAndroid"
                   android:label="@string/app_name"
-                  android:configChanges="keyboard|keyboardHidden|orientation">
+                  android:configChanges="keyboard|keyboardHidden|orientation"
+                  android:screenOrientation="landscape">
+                  >
+                 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+    <uses-sdk android:minSdkVersion="5" android:targetSdkVersion="8" />
 </manifest> 
