adding new app to test tearing, changed pom to the new tearing test app

--- a/magick-desktop/pom.xml
+++ b/magick-desktop/pom.xml
@@ -18,7 +18,9 @@
 
 		<!-- finalName>${project.artifactId}-${project.version}</finalName -->
 
-		<webstartMain>com.gemserk.games.magick.HelloWorldDesktop</webstartMain>
+<!-- 		<webstartMain>com.gemserk.games.magick.HelloWorldDesktop</webstartMain> -->
+		<webstartMain>com.gemserk.games.magick.TearingTest</webstartMain>
+
 		<finalName>${project.artifactId}-${project.version}</finalName>
 		<appletGameParameter>com.gemserk.games.magick.Magick</appletGameParameter>
 		<mainClass>${appletGameParameter}</mainClass>
