--- a/magick-desktop/pom.xml
+++ b/magick-desktop/pom.xml
@@ -19,7 +19,7 @@
 		<!-- finalName>${project.artifactId}-${project.version}</finalName -->
 
 		<webstartMain>com.gemserk.games.magick.HelloWorldDesktop</webstartMain>
-<!-- 		<webstartMain>com.gemserk.games.magick.TearingTest</webstartMain> -->
+		<!-- <webstartMain>com.gemserk.games.magick.TearingTest</webstartMain> -->
 
 		<finalName>${project.artifactId}-${project.version}</finalName>
 		<appletGameParameter>com.gemserk.games.magick.Magick</appletGameParameter>
@@ -117,6 +117,30 @@
 
 							<verbose>false</verbose>
 
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>assembly</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<version>2.2-beta-5</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/distribution.xml</descriptor>
+							</descriptors>
 						</configuration>
 					</plugin>
 				</plugins>
