--- a/magick-android/AndroidManifest.xml
+++ b/magick-android/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="1"
+<manifest android:versionCode="1"
       android:versionName="1.0" package="com.gemserk.games.magick"
       android:installLocation="preferExternal"
-      >
+      xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true" >
         <activity android:name="HelloWorldAndroid"
                   android:label="@string/app_name"
